--- a/app/views/courses/comment_submit.js.erb
+++ b/app/views/courses/comment_submit.js.erb
@@ -1,5 +1,5 @@
 $("#commentList").html('<%=j render :partial=>"comment_list", :locals => {:ct_id=>params[:ctship]}%>');
 $("#comment").val('') ;	
 $('#type').val('1') ;
-$("#commentNew").hide();
-$('#comment_post_link').html('留言');
+//$("#commentNew").hide();
+//$('#comment_post_link').html('留言');
