--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,16 +17,16 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" >
     <div class="item active">
-      <%= image_tag("head_1.jpg", :class=>"header")%>
+      <%= image_tag(asset_path("head_1.jpg"), :class=>"header", :alt=>"NCTU+")%>
     </div>
     <div class="item">
-      <%= image_tag("head_2.jpg", :class=>"header")%>
+      <%= image_tag(asset_path("head_2.jpg"), :class=>"header", :alt=>"NCTU+")%>
     </div>
 		<div class="item">
-      <%= image_tag("head_3.jpg", :class=>"header")%>
+      <%= image_tag(asset_path("head_3.jpg"), :class=>"header", :alt=>"NCTU+")%>
     </div>
 		<div class="item">
-      <%= image_tag("head_4.jpg", :class=>"header")%>
+      <%= image_tag(asset_path("head_4.jpg"), :class=>"header", :alt=>"NCTU+")%>
     </div>
   </div>
 
