--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 
 
   <%= csrf_meta_tags %>
-
+	<meta name="description" content="NCTU+ 交大智慧選課系統">
 </head>
 
 <body>
 
-<%= image_tag("head_1.jpg", :id=>'bg1', :class=>"bg")%>
+<%= image_tag(asset_path("head_1.jpg"), :id=>'bg1', :class=>"bg", :alt=>"NCTU+")%>
 
 
 
@@ -69,6 +69,15 @@
 		});
 		
 	});
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-54567036-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 	
 </html>
