--- a/app/views/user/_statics.html.erb
+++ b/app/views/user/_statics.html.erb
@@ -44,17 +44,19 @@
 		</tr>
 		<% cs_art_1 = @cs_all_passed.select{|cs|cs.course_detail.brief=="藝文賞析"&&cs.course.ch_name.include?('一')} %>
 		<% cs_art_2 = @cs_all_passed.select{|cs|cs.course_detail.brief=="藝文賞析"&&cs.course.ch_name.include?('二')} %>
+		<% cs_art_after102 = @cs_all_passed.select{|cs|cs.course_detail.semester_id>=7&&cs.course_detail.brief=="藝文賞析"} %>
 		<tr class="row">
+		
 			
 			<td class="col-md-3" colspan="3">
-				<% if cs_art_1.length>0 %>
+				<% if cs_art_1.length>0||cs_art_after102.length>=1 %>
 				<p class="text-center no-margin-bottom">
 					<%= fa_icon "check 2x", style:"color:#5cb85c" %>
 				</p>
 				<% end %>
 			</td>
 			<td class="col-md-3" colspan="3">
-					<% if cs_art_2.length>0 %>
+					<% if cs_art_2.length>0||cs_art_after102.length>=2 %>
 					<p class="text-center no-margin-bottom">
 						<%= fa_icon "check 2x", style:"color:#5cb85c" %>
 					</p>
