--- a/app/views/courses/course_chart.js.erb
+++ b/app/views/courses/course_chart.js.erb
@@ -85,8 +85,8 @@ $(function () {
         ]
     });
 });
-/*
-alert('<%=raw @row_name.to_s%>');
+
+alert('<%=raw @ttmp.to_s%>');
+
 alert('<%=raw @row_teacher.to_s%>');
 alert('<%=raw @row_pick.to_s%>');
-*/
