--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   
   <% javascript_include_tag "#{params[:controller]}" %>
-
-
   <%= csrf_meta_tags %>
+	
+	<%= analytics_init if Rails.env.production? %>
+	
 	<meta name="description" content="NCTU+ 交大智慧選課系統">
 </head>
 
@@ -70,13 +71,6 @@
 		
 	});
 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-54567036-1', 'auto');
-  ga('send', 'pageview');
 
 </script>
 	
