--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <%= csrf_meta_tags %>
 	
 	<%= analytics_init if Rails.env.production? %>
-	
+	<% if params[:controller]!="main"%>
+	<meat name="robots" content="noindex">
+	<% end %>
 	<meta name="description" content="NCTU+ 交大智慧選課系統">
 </head>
 
