change chart's title

--- a/app/views/courses/_scroll_sidebar.html.erb
+++ b/app/views/courses/_scroll_sidebar.html.erb
@@ -3,7 +3,7 @@
 	<li><a href="#tc">課程資訊</a></li>
 	<ul class="nav sub-menu">
 		<!--<li><a href="#tc">課程資訊</a></li>-->
-		<li><a href="#reg_nums">歷年選課狀況</a></li>
+		<li><a href="#reg_nums">歷年統計</a></li>
 		<li><a href="#course-tips">課程攻略</a></li>
 		<li><a href="#messages">留言板</a></li>
 	</ul>
