--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
 				<li><a href="/course_details/" rel="nofollow">全校課程</a></li>
 
 				<li><a href="/courses/simulation" rel="nofollow">模擬排課</a></li>
-				
+				<li><a href="/courses/groups" rel="nofollow">課程地圖</a></li>
       </ul>
 			
 			<ul class="nav navbar-nav navbar-right">
