--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -2,7 +2,8 @@
 
 body
 {	
-	font-family :Noto Sans T Chinese Medium ,Microsoft JhengHei;
+	font-family :Noto Sans T Chinese Medium ,Microsoft JhengHei, 'Lato', Calibri, Arial, sans-serif;
+;
 	//color :white;
 	//width:800px;
 	height: 100%;
