add GPA but not shown

--- a/app/views/user/_statics.html.erb
+++ b/app/views/user/_statics.html.erb
@@ -1,4 +1,4 @@
-<% common_dimension={'公民'=>'civil','群已'=>'youandme','自然'=>'nature','歷史'=>'history','文化'=>'culture','通識'=>'world'} %>
+<% common_dimension={'公民'=>'civil','群己'=>'youandme','自然'=>'nature','歷史'=>'history','文化'=>'culture','通識'=>'world'} %>
 
 <% foreign_dimension=['基礎','進階'] %>
 
