--- a/app/views/user/_table_list_by_costype.html.erb
+++ b/app/views/user/_table_list_by_costype.html.erb
@@ -68,7 +68,17 @@
 			</h4>
 		</td>
 	</tr>
+	
+	<!--
+	<tr class="row" style="background-color:#FFFFBB;">
+		<td colspan="2" >
+			<h4 class="text-right">
+				GPA_ALL : <%=@gpa_all%>
 
+			</h4>
+		</td>
+	</tr>
+	-->
 </table>
 
 
