--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -5,23 +5,16 @@
 		<% next if s==latest_semester %>
 		<li id="sem_<%=s.id%>"  class="sem_tab"><a href="javascript:void(0);" onclick="change_sem(<%=s.id%>);"><%=s.name%></a></li>
 	<% end %>
-	<li class="" id="add_sem"><a href="javascript:void(0);" onclick="show_add_form()">新增學期</a></li>
+	<!--<li class="" id="add_sem"><a href="javascript:void(0);" onclick="show_add_form()">新增學期</a></li>-->
 	<!--<li class="" id="show_statics"><a href="javascript:void(0);" onclick="show_statics()">統計</a></li>-->
 	<!--<span class="glyphicon glyphicon-question-sign clickable-hover pull-right" style="color:green !important; "onclick="show_tip('simulation_tips')"></span>-->
 </ul>
 
-<div class="row hidden " id="simulation_tips">
-	<div class="col-md-12 ">
-	<div class="bs-callout bs-callout-info ">
-		123123123123
-	</div>
-	</div>
-</div>
 <br>
 <div id="srch_and_schd" class="" style="background-color:rgba(221,221,221,0.8)">
 </div>
 <br>
-
+<!--
 <div class="row well" id="add_sem_form">
 	<div class="form-inline col-md-offset-5">
 		<div class="form-group">
@@ -35,7 +28,7 @@
 		<% end %>
 	</div>
 </div>
-
+-->
 <script>
 
 function add_semester(){
