--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,24 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="/*position:absolute;z-index:3000;*/">
+<ul class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="<%=root_url%>" style="font-family:arial;">NCTU<sup>+</sup></a>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+      <a class="navbar-brand " href="<%=root_url%>" style="font-family:arial;">NCTU<sup>+</sup></a>
 
 		</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-">
       <ul class="nav navbar-nav">
 				<% if current_user && TopManager.find_by_user_id(current_user.id) %>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">管理<b class="caret"></b></a>
-						<ul class="dropdown-menu">
+						<ul class="dropdown-menu" role="menu">
 								<li><a href="/user/manage" rel="nofollow">使用者<span class="badge pull-right"><%=User.all.count%></span></a></li>
 								<li><a href="/departments" rel="nofollow">系<span class="badge pull-right"><%=Department.all.count%></span></a></li>
 						</ul>
@@ -62,7 +68,7 @@
 				
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
-</nav>
+</ul>
 
 <div class="modal fade" id="user_modal" tabindex="-1" role="dialog" aria-hidden="true" >
 	<div class="modal-dialog" >
