--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -1,12 +1,5 @@
 jQuery ->
   $('body').prepend('<div id="fb-root"></div>')
-
-  $.ajax
-    url: "#{window.location.protocol}//connect.facebook.net/en_US/all.js"
-    dataType: 'script'
-    cache: true
-
-
 window.fbAsyncInit = ->
   FB.init(appId: '<%=Facebook::APP_ID%>', cookie: true,xfbml: true)
 
@@ -19,3 +12,14 @@ window.fbAsyncInit = ->
     FB.getLoginStatus (response) ->
       FB.logout() if response.authResponse
     true
+		
+((d, s, id) ->
+  js = undefined
+  fjs = d.getElementsByTagName(s)[0]
+  return  if d.getElementById(id)
+  js = d.createElement(s)
+  js.id = id
+  js.src = "//connect.facebook.net/en_US/sdk.js"
+  fjs.parentNode.insertBefore js, fjs
+  return
+) document, "script", "facebook-jssdk"
