--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -1,7 +1,7 @@
 jQuery ->
   $('body').prepend('<div id="fb-root"></div>')
 window.fbAsyncInit = ->
-  FB.init(appId: '<%=Facebook::APP_ID%>', cookie: true,xfbml: true)
+  FB.init(appId: '<%=Facebook::APP_ID%>', cookie: true,xfbml: true,version: 'v2.1')
 
   $('#sign_in').click (e) ->
     e.preventDefault()
